--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>section-llancalahuen</title>
 </head>
+
 <body>
+<header>
+    <div class="logo">
+        <img src="assets/img/logodepagina.png" alt="Logo">
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="#section1">P-51 Mustang</a></li>
+            <li><a href="#section2">SpitFire MKll</a></li>
+            <li><a href="#section3">P-47D</a></li>
+        </ul>
+    </nav>
+</header>
+<section class="full-height" id="section1">
+    <div>
+
+        <h1>Conoce el P-51 Mustang</h1>
+        <img src="assets/img/espacio1.jpg">
+        <p>El P-51 Mustang es un avión de combate icónico de la Segunda Guerra Mundial y uno de los aviones más famosos de la historia de la aviación. El P-51 Mustang es un avión de combate legendario que desempeñó un papel crucial en la Segunda Guerra Mundial y dejó un legado duradero en la historia de la aviación militar. Su diseño innovador, rendimiento impresionante y capacidad de escolta de largo alcance lo convirtieron en un elemento clave en la victoria de los Aliados en Europa.</p>
+
+    </div>
+
+</section>
+<section class="full-height" id="section2">
+    <div>
+
+        <h1>Conoce el SpitFire MKll</h1>
+        <img src="assets/img/espacio2.jpg">
+        <p>El Spitfire Mk II (Mark II) fue una variante del icónico avión de combate británico Supermarine Spitfire que desempeñó un papel importante en la Segunda Guerra Mundial. El Spitfire Mk II fue una variante clave del famoso avión de combate Spitfire que desempeñó un papel fundamental en la Batalla de Gran Bretaña y en la defensa de Gran Bretaña contra la Luftwaffe alemana. Su combinación de velocidad, agilidad y capacidad de armamento lo convirtió en uno de los aviones más icónicos y efectivos de la Segunda Guerra Mundial.</p>
+
+    </div>
+
+</section>
+<section class="full-height" id="section3">
+    <div>
+
+        <h1>Conoce el P-47D</h1>
+        <img src="assets/img/espacio3.jpg">
+        <p>El P-47D Thunderbolt fue un avión de combate estadounidense ampliamente utilizado durante la Segunda Guerra Mundial y uno de los aviones más grandes y robustos de su época. El P-47D Thunderbolt fue un avión de combate estadounidense notable durante la Segunda Guerra Mundial, conocido por su robustez, capacidad de combate y versatilidad en una variedad de roles. Contribuyó significativamente al éxito de las misiones aéreas aliadas en Europa y en otros teatros de operaciones.</p>
+
+    </div>
+
+
+</section>
+<script src="js/script.js"></script>
+
+<link href="assets/js/bootstrap/js/bootstrap.bundle.min.js">
+<link href="assets/js/bootstrap/js/bootstrap.esm.js">
+<link href="assets/js/bootstrap/js/bootstrap.js">
+
 
 </body>
+
 </html>
